@@ -4,12 +4,13 @@
   state:
     release: alpha
     api: alpha
-  date: 2021-07-04
+  date: 2022-11-04
   license:
     identifier: LGPL-2.1
     uri: http://www.horde.org/licenses/lgpl21
-  notes: |+
-    
+  notes: |
+    [rla] Enable PHP 8.x compat.
+    |+
 3.0.0alpha4:
   api: 3.0.0alpha1
   state:
